--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Mirrored from marwarpay.com/-->
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8" /><meta charset="utf-8" /><title>
 	marwarpay.com | Home
-</title><link rel="icon" href="img/favicon.png" /><link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /><link rel="stylesheet" href="css/font-awesome.css" /><link rel="stylesheet" href="css/owl.css" /><link rel="stylesheet" href="css/animate.css" /><link rel="stylesheet" href="css/variable.css" /><link rel="stylesheet" href="css/css.css" /><link rel="stylesheet" href="css/css_002.css" /><link rel="stylesheet" href="css/style.css" /><link rel="stylesheet" href="css/bootstrap.css" /><link rel="stylesheet" href="css/layerslider.css" type="text/css" />
+</title><link rel="icon" href="img/favicon.png" /><link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /><link rel="stylesheet" href="css/font-awesome.css" /><link rel="stylesheet" href="css/owl.css" /><link rel="stylesheet" href="css/animate.css" /><link rel="stylesheet" href="css/variable.css" /><link rel="stylesheet" href="css/css.css" /><link rel="stylesheet" href="css/css_002.css" /><link rel="stylesheet" href="css/style.css" /><link rel="stylesheet" href="css/bootstrap.css" /><link rel="stylesheet" href="css/layerslider.css" type="text/css" />
 <script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
