--- a/Contactus.html
+++ b/Contactus.html
@@ -7,7 +7,7 @@
 <head><meta http-equiv="content-type" content="text/html; charset=UTF-8" /><meta charset="utf-8" /><title>
 	marwarpay.com | Contactus
 </title><link rel="icon" href="img/favicon.png" />
-<link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="cdnjs.cloudflare/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="css/font-awesome.css" />
 <link rel="stylesheet" href="css/owl.css" />
 <link rel="stylesheet" href="css/animate.css" />
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/bootstrap.css" />
 <link rel="stylesheet" href="css/layerslider.css" type="text/css" />
-<script async src="../pagead2.googlesyndication.com/pagead/js/f.txt"></script>
+<script async src="pagead2.googlesyndication/pagead/js/f.txt"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-9886087574334515",
